PROJECT(roboculus-be)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH $ENV{CMAKE_MODULE_PATH})
FIND_PACKAGE(BIAS)
IF(BIAS_FOUND)
  INCLUDE(${BIAS_USE_FILE})
ENDIF(BIAS_FOUND)


SET(ROBOCULUS_EXTERN_INCLUDE_DIR ${BIAS_INCLUDE_DIR} "${BIAS_INCLUDE_DIR}/BIAS")
SET(ROBOCULUS_EXTERN_LINK_DIR ${ROBOCULUS_EXTERN_LINK_DIR} ${BIAS_LINK_DIRECTORIES} )
INCLUDE_DIRECTORIES(${ROBOCULUS_EXTERN_INCLUDE_DIR})
LINK_DIRECTORIES(${ROBOCULUS_EXTERN_LINK_DIR})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${BIAS_CXX_FLAGS}")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${BIAS_C_FLAGS}")
SET(CMAKE_BUILD_TYPE ${BIAS_BUILD_TYPE} CACHE STRING "build type for roboculus" FORCE)


SET(LIBS ${LIBS} OpenNI BIASVideoSourceD BIASImageBaseD BIASCommonD BIASDebugD BIASFeatureDetectorD BIASFilterD BIASGeometryBaseD BIASGeometryD BIASGLviewerD BIASGuiD BIASImageD BIASImageUtilsBaseD BIASMatcher2DD BIASMathAlgoD BIASMathBaseD BIASNetworkCommD BIASOpenGLFrameworkD BIASPanTiltD BIASStateEstimatorD BIASUtilsD)
MESSAGE(TestVar "Libs: ${LIBS}")

ADD_EXECUTABLE(roboculus-be main.cpp)
TARGET_LINK_LIBRARIES(roboculus-be ${LIBS})

INSTALL(TARGETS roboculus-be RUNTIME DESTINATION bin)
